kube-manifests/microservices/microservice-beta.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-beta
  labels:
    app: microservice-beta
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-beta
      version: v1
  template:
    metadata:
      labels:
        app: microservice-beta
        version: v1
      annotations:
        instrumentation.opentelemetry.io/inject-java: "opentelemetry/vulnerabilitytracing-instrumentation"
    spec:
      containers:
        - image: downstream-caller-service
          name: microservice
          ports:
            - name: http
              containerPort: 8000
            - name: metrics
              containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-beta
  labels:
    app: microservice-beta
    version: v1
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: microservice-beta
    version: v1
