kube-manifests/microservices/microservice-alpha.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-alpha
  labels:
    app: microservice-alpha
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-alpha
      version: v1
  template:
    metadata:
      labels:
        app: microservice-alpha
        version: v1
      annotations:
        instrumentation.opentelemetry.io/inject-java: "opentelemetry/vulnerabilitytracing-instrumentation"
    spec:
      volumes:
        - name: config
          configMap:
            name: microservice-alpha-config
      containers:
        - image: thesis-microservice
          name: microservice
          ports:
            - name: http
              containerPort: 8000
            - name: metrics
              containerPort: 9000
          volumeMounts:
            - mountPath: /app/config
              name: config
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-alpha
  labels:
    app: microservice-alpha
    version: v1
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: microservice-alpha
    version: v1
---
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: microservice-alpha
spec:
  gateways:
    - microservice-gateway
  hosts:
    - 'alpha.microservice.localhost'
  http:
    - route:
        - destination:
            host: microservice-alpha.microservices.svc.cluster.local
