kube-manifests/microservices/microservice-epsilon2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-epsilon2
  labels:
    app: microservice-epsilon2
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-epsilon2
      version: v1
  template:
    metadata:
      labels:
        app: microservice-epsilon2
        version: v1
      annotations:
        # Uncomment to inject OpenTelemetry Java agent
        #        instrumentation.opentelemetry.io/inject-java: "true"
        # Uncomment to inject OpenTelemetry Java agent, extended with vulnerability tracer
        instrumentation.opentelemetry.io/inject-java: "opentelemetry/vulnerabilitytracing-instrumentation"
    spec:
      containers:
        - image: generator-service
          name: microservice
          ports:
            - name: http
              containerPort: 8000
            - name: metrics
              containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-epsilon2
  labels:
    app: microservice-epsilon2
    version: v1
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: microservice-epsilon2
    version: v1
---
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: microservice-epsilon2
spec:
  gateways:
    - microservice-gateway
  hosts:
    - 'epsilon2.microservice.localhost'
  http:
    - route:
        - destination:
            host: microservice-epsilon2.microservices.svc.cluster.local
