kube-manifests/microservices/microservice-gamma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-gamma
  labels:
    app: microservice-gamma
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-gamma
      version: v1
  template:
    metadata:
      labels:
        app: microservice-gamma
        version: v1
    spec:
      volumes:
        - name: config
          configMap:
            name: microservice-gamma-config
      containers:
        - image: thesis-microservice
          name: microservice
          ports:
            - name: http
              containerPort: 8000
            - name: metrics
              containerPort: 9000
          volumeMounts:
            - mountPath: /app/config
              name: config
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-gamma
  labels:
    app: microservice-gamma
    version: v1
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: microservice-gamma
    version: v1
---
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: microservice-gamma
spec:
  gateways:
    - local-gateway
  hosts:
    - 'gamma.localhost'
  http:
    - route:
        - destination:
            host: microservice-gamma.microservices.svc.cluster.local
